--- a/custom/style-custom.css
+++ b/custom/style-custom.css
@@ -1,3 +1,29 @@
+.skills-list{
+  padding-left: 0.5rem;
+}
+
+.skills-list li {
+  padding: 2px 0;
+}
+
+.learning {
+  font-style: italic;
+  font-size: .7rem; 
+}
+
+
+
+.overlay-proj {
+  background-color: #6600c5;
+  position: absolute;
+  top: 0;
+  left: 0px;
+  padding: 0;
+  height: 100%;
+  width: 100%;
+  opacity: .85;
+}
+
 .project-title {
   color: #f5f5f5;
   font-size: 2.5rem;
@@ -32,10 +58,25 @@
   }
 }
 
-.project-desc {
+.project-purpose {
+  color: #dfbdff;
+  font-size: 1.2rem;
+  font-style: italic;
+  overflow: hidden;
+  margin-bottom: 32px;
+}
+
+.project-hook{
   color: #f5f5f5;
   font-size: 1.2rem;
   font-weight: bold;
+  overflow: hidden;
+}
+
+.project-desc {
+  color: #f5f5f5;
+  font-size: 1.2rem;
+  font-weight: normal;
   overflow: hidden;
 }
 
@@ -130,7 +171,7 @@ img.img-responsive {
 
 .close:hover,
 .close:focus {
-  color: white;
+  color: white !important;
   text-decoration: none;
   cursor: pointer;
 }
@@ -146,8 +187,9 @@ img.img-responsive {
   display: block;
   width: auto;
   max-width: 100%;
-  margin: 0 auto;
+  margin: 0 auto; 
   object-fit: cover;
+  max-height: 75vh;
 }
 
 /* Next & previous buttons */
